# socnav_data_collection

./: .gitignore  .gitmodules  README.md  install.sh
catkin_ws/src/bev_camera/: CMakeLists.txt  package.xml
catkin_ws/src/bev_camera/config/: dell_wb3023.yml  insta360_x4.yml  logitech_c920.yml
catkin_ws/src/bev_camera/launch/: dell_wc.launch  insta360_x4.launch
etc/udev/rules.d/: 50-ds4drv.rules
misc/: .bashrc
ros2_ws/src/bev_cameras/: package.xml  setup.cfg  setup.py
ros2_ws/src/bev_cameras/bev_cameras/utils/: camera_config.py
ros2_ws/src/bev_cameras/config/: dell_wb3023.yaml  dell_wb3023.yml  dell_wb3023_camera_info_0.yaml  insta360_x4.yaml  logitech_c920.yaml  logitech_c920.yml  logitech_c920_camera_info_0.yaml  logitech_c920_camera_info_1.yaml
ros2_ws/src/bev_cameras/launch/: cam360_launch.py  dell_camera_launch.py  dell_wb3023_launch.py  insta360_x4_launch.py  logitech_c920_launch.py
ros2_ws/src/distributed_bag_recorder/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/distributed_bag_recorder/distributed_bag_recorder/: host_bag_service.py  robot_bag_service.py
ros2_ws/src/distributed_bag_recorder/launch/: host.launch.py  robot.launch.py
scripts/: enable_can.sh
