<?xml version="1.0"?>
<package format="3">
  <name>distributed_bag_recorder</name>
  <version>0.0.1</version>
  <description>ROS 2 package to control distributed bag recording across a laptop and robot</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
</package>
